<resources>
    <string name="app_name">Buoi7</string>

    <string name="title_login">Login</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="title_register">Register</string>
    <string name="ok">Ok</string>
    <string name="data_invalid">User name or password invalid</string>
    <string name="register_cancelled">Register cancelled</string>
    <string name="hint_value">Value</string>
    <string name="call">Call</string>
    <string name="browser">Browser</string>
    <string name="gallery">Gallery</string>

</resources>
